--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -14,31 +14,27 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.6.5 (08/??/2010)</h1>
+<h1>Version 0.6.5 (08/10/2010)</h1>
 <h2>New in this version</h2>
-<ul>
-<li><span class="bugFix">Fixes&nbsp;</span>the
-transactions list panel's tool tip.</li>
-<li><span class="bugFix">Fixes some bugs</span>
-in
-balance history pane:</li>
-<ul>
-<li>Sometimes, today was not visible in the window.</li>
-<li>Sometimes, erroneous balance alerts were displayed.</li>
-</ul>
-<li>Add a confirm dialog when the user save data in an existing
+<ul><li>Adds a confirm dialog when the user save data in an existing
 file.</li>
 <li>File import improvements:</li>
 <ul>
 <li><span class="bugFix">Fixes a bug</span>
-that prevents the import error dialog to be displayed sometimes.</li><li>In the error dialog, you now have the choice to cancel the import or to process only lines without error. Fields with errors are now displayed in red to help identifying them.</li><li>Import settings (imported columns, column separator,
+that prevents the import error dialog to be displayed sometimes.</li><li>In
+the error dialog, you now have the choice to cancel the import or to
+process only lines without error. Fields with errors are now displayed
+in red to help identifying them.</li><li>Import settings (imported columns, column separator,
 etc...) are now kept in memory, you retrieve them if you import again. </li>
 </ul>
 <ul>
 <li>The amount parser is now more strict (previously an
 amount string of "52g32" results in an transaction with an amount of
 52. Now the line is reported as an error).</li>
-</ul>
+</ul><li><span class="bugFix">Fixes&nbsp;</span>the
+transactions list panel's tool tip.</li><li><span class="bugFix">Fixes some bugs</span>
+in
+balance history pane:</li><ul><li>Sometimes, today was not visible in the window.</li><li>Sometimes, erroneous balance alerts were displayed.</li></ul>
 
 </ul>
 <ul>
