--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,8 +16,15 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.5 (10/08/2010)</h1>
+<h1>Version 0.7.0 (??/09/2010)</h1>
 <h2>Nouveautés de cette version</h2>
+<ul>
+  <li>Ajoute la possibilit&eacute; de prot&eacute;ger l'acc&egrave;s aux fichiers 
+    de donn&eacute;es par mot de passe.</li>
+</ul>
+<hr>
+<h1>Versions précédentes</h1>
+<h2>Version 0.6.5 (10/08/2010)</h2>
 <ul>
 <li>Ajout d'un message de confirmation lorsque l'on sauve les données dans un fichier déjà existant.</li><li>Amélioration dans l'importation :</li><ul><li><span class="bugFix">Correction d'un bug</span> qui empéchait le dialogue de compte rendu des erreurs d'importation de s'afficher dans certains cas.</li><li>Ce
 dialogue permet à présent d'annuler l'importation ou de traiter
@@ -31,8 +38,6 @@ ligne est considérée comme une erreur).</li></ul><li><span class="bugFix">Correc
 bugs</span> dans l'onglet d'historique du solde :</li><ul><li>Parfois, la date courante n'était pas visible dans la fenêtre.</li><li>Parfois, en particulier lors du pointage, des alertes&nbsp;erronnées apparaissaient.</li></ul><li><span class="bugFix">Correction</span> de la bulle d'aide du panneau
 contenant la liste des opérations.</li>
 </ul>
-<hr>
-<h1>Versions précédentes</h1>
 <h2>Version 0.6.4 (16/05/2010)</h2>
 <ul>
 <li>Amélioration des alertes sur les soldes : A présent, on
