--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -14,8 +14,14 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.6.5 (08/10/2010)</h1>
+<h1>Version 0.7.0 (09/??/2010)</h1>
 <h2>New in this version</h2>
+<ul>
+  <li>Adds the ability to protect access to data files by password.</li>
+</ul>
+<hr>
+<h1>Older releases</h1>
+<h2>Version 0.6.5 (08/10/2010)</h2>
 <ul><li>Adds a confirm dialog when the user save data in an existing
 file.</li>
 <li>File import improvements:</li>
@@ -35,12 +41,8 @@ amount string of "52g32" results in an transaction with an amount of
 transactions list panel's tool tip.</li><li><span class="bugFix">Fixes some bugs</span>
 in
 balance history pane:</li><ul><li>Sometimes, today was not visible in the window.</li><li>Sometimes, erroneous balance alerts were displayed.</li></ul>
+</ul>
 
-</ul>
-<ul>
-</ul>
-<hr>
-<h1>Older releases</h1>
 <h2>Version 0.6.4 (05/16/2010)</h2>
 <ul>
 <li>Improves the balance alert: Each account can have two
