--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -12,43 +12,54 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head>
+</style>
+</head>
 <body>
 <h1>Version 0.7.0 (09/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Adds the ability to protect access to data files by password.</li>
+<li>Adds the ability to protect access to data files by
+password.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
 <h2>Version 0.6.5 (08/10/2010)</h2>
-<ul><li>Adds a confirm dialog when the user save data in an existing
+<ul>
+<li>Adds a confirm dialog when the user save data in an
+existing
 file.</li>
-<li>File import improvements:</li>
+<li>File import improvements:
 <ul>
 <li><span class="bugFix">Fixes a bug</span>
-that prevents the import error dialog to be displayed sometimes.</li><li>In
+that prevents the import error dialog to be displayed sometimes.</li>
+<li>In
 the error dialog, you now have the choice to cancel the import or to
 process only lines without error. Fields with errors are now displayed
-in red to help identifying them.</li><li>Import settings (imported columns, column separator,
+in red to help identifying them.</li>
+<li>Import settings (imported columns, column separator,
 etc...) are now kept in memory, you retrieve them if you import again. </li>
-</ul>
-<ul>
 <li>The amount parser is now more strict (previously an
 amount string of "52g32" results in an transaction with an amount of
 52. Now the line is reported as an error).</li>
-</ul><li><span class="bugFix">Fixes&nbsp;</span>the
-transactions list panel's tool tip.</li><li><span class="bugFix">Fixes some bugs</span>
-in
-balance history pane:</li><ul><li>Sometimes, today was not visible in the window.</li><li>Sometimes, erroneous balance alerts were displayed.</li></ul>
 </ul>
-
+</li>
+<li><span class="bugFix">Fixes&nbsp;</span>the
+transactions list panel's tool tip.</li>
+<li><span class="bugFix">Fixes some bugs</span>
+in
+balance history pane:
+<ul>
+<li>Sometimes, today was not visible in the window.</li>
+<li>Sometimes, erroneous balance alerts were displayed.</li>
+</ul>
+</li>
+</ul>
 <h2>Version 0.6.4 (05/16/2010)</h2>
 <ul>
 <li>Improves the balance alert: Each account can have two
 balance thresholds. An alert is displayed in the balance history view
 whenever the balance is not between these values.</li>
-<li>Improves the balance history pane:</li>
+<li>Improves the balance history pane:
 <ul>
 <li>Add a button to set the selected date to today.</li>
 <li>Add
@@ -56,16 +67,20 @@ a menu that lists the balance alerts. Selecting an alert sets up the
 filter in order to view the balance history of the account on which the
 alert occurs. </li>
 </ul>
+</li>
 <li><span class="bugFix">Fixes a bug : </span>The
 initial balance editing in the account administration panel was broken.</li>
 <li><span class="bugFix">Fixes some bugs</span>
-in periodical transaction generation:</li>
+in periodical transaction generation:
 <ul>
-<li>When the generated transactions were edited during their
+<li>When the generated transactions were edited during
+their
 generation, changes where ignored.</li>
-<li>There were many problems with periodical transaction with
+<li>There were many problems with periodical transaction
+with
 an end date.</li>
 </ul>
+</li>
 <li><span class="bugFix">Fixes minor bug</span>
 in the "Filter" menu refresh.</li>
 </ul>
@@ -89,10 +104,12 @@ Yapbam.exe application).</li>
 support page).</li>
 <li>Improves launch speed (The launch don't wait anymore for
 the "new release check" to finish).</li>
-<li>Improves the check for updates process (this check can now
+<li>Improves the check for updates process (this check can
+now
 be interrupted if the connection takes too long).</li>
 <li>Improves the account&nbsp;administration screen.</li>
-<li>Improves integer field input (now only numerical characters
+<li>Improves integer field input (now only numerical
+characters
 can be typed in such fields and up and down arrows respectively
 increase or decrease the field value).</li>
 <li>Simplifies account creation dialog. Users report that the
@@ -106,10 +123,12 @@ digit year format (for instance 03/20/9).</li>
 <h2>Version 0.6.0 (03/09/2010)</h2>
 <ul>
 <li>Adds text file import/export capabilities.</li>
-<li>Adds an alert icon to the balance history tab when there is
+<li>Adds an alert icon to the balance history tab when there
+is
 a negative balance period in the future.</li>
 <li>Improves date fields behaviour.</li>
-<li><span class="bugFix">Fixes</span> a bug
+<li><span class="bugFix">Fixes</span> a
+bug
 in the auto-complete wizard that sometimes failed to deduce the
 paiement mode.</li>
 <li><span class="bugFix">Fixes</span>&nbsp;a
@@ -120,7 +139,8 @@ zero</li>
 <h2>Version 0.5.4 (02/08/2010)</h2>
 <ul>
 <li>Portuguese translation (Thank's to Marco).</li>
-<li><span class="bugFix">Fixes</span> a bug
+<li><span class="bugFix">Fixes</span> a
+bug
 that deleted data files while saving under some Linux configurations.</li>
 <li>Adds an auto-complete wizard in the "new transaction"
 dialog that completes the description as you type and
@@ -128,7 +148,8 @@ deduces the category and payment mode.</li>
 </ul>
 <h2>Version 0.5.3 (01/25/2010)</h2>
 <ul>
-<li>Currency converter Portuguese translation (Thank's to Marco)</li>
+<li>Currency converter Portuguese translation (Thank's to
+Marco)</li>
 <li><span class="bugFix">Fixes</span>
 a lot of mistakes in english wording (Thank's to Sharada)</li>
 <li>Adds the ability to show/hide columns in the transactions
@@ -141,7 +162,8 @@ table.</li>
 <h2>Version 0.5.1 (01/17/2010)</h2>
 <ul>
 <li>Adds transactions printing (feature requested by users).</li>
-<li>Add a button in the transactions table to show/hide all the
+<li>Add a button in the transactions table to show/hide all
+the
 subtransactions.</li>
 </ul>
 <h2>Version 0.5.0 (01/10/2010)</h2>
@@ -150,20 +172,23 @@ subtransactions.</li>
 <li>Adds a preference panel to configure
 the balance report fields colors (some users reported the positive
 balance were quite illegible).</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 In statistic panel, sometimes, some transactions that would have been
 rejected by the filter were not.</li>
 </ul>
 <h2>Version 0.4.0 (01/03/2010)</h2>
 <ul>
-<li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
+<li>Introduce extended filtering
 capabilities (on category, modes, etc ...).</li>
 <li><span class="bugFix">Fixes</span>
 a lot of mistakes in english wording. Fixes some missing tooltips.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 Sometimes, the next date of a periodical transaction was not updated
 after generating an occurence of this transaction.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 The currency converter tool didn't work under Ubuntu (and probably
 other Linux systems).</li>
 <li><span class="bugFix">Bug fixed</span>
@@ -171,35 +196,37 @@ other Linux systems).</li>
 The currency converter tool was very, very slow when European Central
 Bank did not refresh its rates for more than one day (for instance when
 it's new year's day).</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 Sometimes, it was impossible to change the account of a transaction.</li>
 </ul>
 <h2>Version 0.3.7 (12/05/2009)</h2>
 <ul>
-<li><span class="bugFix"></span><span class="bugFix"></span>Dates can now be selected in a
-calendar.</li>
+<li>Dates can now be selected in a calendar.</li>
 </ul>
 <h2>Version 0.3.6 (11/22/2009)</h2>
 <ul>
-<li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : In the periodical
+<li><span class="bugFix">Bug fixed</span> : In the periodical
 transaction edit dialog, it was impossible to leave the end date blank
 if this field gained the focus.</li>
 </ul>
 <h2>Version 0.3.5 (11/20/2009)</h2>
 <ul>
-<li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : Saving data
+<li><span class="bugFix">Bug fixed</span> : Saving data
 containing a periodicalTransaction with a daily period didn't work.</li>
 <li>The periodical transactions can now have a end date.</li>
 </ul>
 <h2>Version 0.3.4 (11/11/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 Under some Windows XP, the preferences and the last state were not
 saved.</li>
 </ul>
 <h2>Version 0.3.3 (11/02/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 When a new file was opened, the category list in the administration tab
 was not refreshed.</li>
 <li><span class="bugFix">Bug fixed</span>
@@ -210,14 +237,18 @@ anymore.</li>
 </ul>
 <h2>Version 0.3.2 (11/01/2009)</h2>
 <ul>
-<li>The main frame title now indicates if the data needs to be
+<li>The main frame title now indicates if the data needs to
+be
 saved (its title ends with a *).</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 Deleting a category used in a transaction corrupted the data.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 When reading the last opened file failed, this file was still
 considered as "last opened file".&nbsp;</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 If, after reading a file you create a new file, then quit and restart
 Yapbam, the file was&nbsp;opened again</li>
 </ul>
@@ -259,17 +290,20 @@ extra segments (especially when you removed all the transactions).</li>
 </ul>
 <h2>Version 0.2.8 (10/18/2009)</h2>
 <ul>
-<li>Add a payment mode administration panel with the ability to
-remove payment modes.<span class="bugFix"></span></li>
-<li><span class="bugFix">Bug fixed</span> :
+<li>Add a payment mode administration panel with the ability
+to
+remove payment modes.</li>
+<li><span class="bugFix">Bug fixed</span>
+:
 When an used category was deleted, sometimes, it remained some
 transactions with that category.</li>
 </ul>
 <h2>Version 0.2.7 (10/16/2009)</h2>
 <ul>
 <li>During the first startup, Yapbam now ask if you want to
-connect to the Internet and check for update.<span class="bugFix"></span></li>
-<li><span class="bugFix">Bug fixed</span> :
+connect to the Internet and check for update.</li>
+<li><span class="bugFix">Bug fixed</span>
+:
 A double-click on the
 transaction list in the check mode opened the "edit" dialog instead of
 mark the transaction as checked.</li>
@@ -277,9 +311,10 @@ mark the transaction as checked.</li>
 <h2>Version 0.2.6 (10/13/2009)</h2>
 <ul>
 <li>Add a administration panel to manage categories.</li>
-<li><span class="bugFix"></span><span class="bugFix">Bug fixed</span> : The popup menu in
+<li><span class="bugFix">Bug fixed</span> : The popup menu in
 the accounts administration panel had many separators.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 The account manager now verified that new account name is not empty,
 and not already used.</li>
 <li><span class="bugFix">Bug fixed </span>:
@@ -294,7 +329,8 @@ transaction, in the dialog, the date is automatically setted to today</li>
 </ul>
 <h2>Version 0.2.5 (10/10/2009)</h2>
 <ul>
-<li><span class="bugFix"></span>Add account
+<li>Add
+account
 management.</li>
 </ul>
 <h2>Version 0.2.4 (10/02/2009)</h2>
@@ -330,7 +366,8 @@ field was not documented.</li>
 </ul>
 <h2>Version 0.2.0 (09/27/2009)</h2>
 <ul>
-<li>Introduce full periodic transactions support (now, they can
+<li>Introduce full periodic transactions support (now, they
+can
 be
 generated). I plan to improve this fucntionnality which the ability to
 edit generated transactions in the generation dialog.</li>
@@ -339,21 +376,26 @@ transaction.</li>
 </ul>
 <h2>Version 0.1.20 (09/24/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 In the new/edit transaction dialog, when you created a new mode,
 account or category with a very long name, the window appearence was
 broken.</li>
-<li>Oups ! Some wording were not translated in the new Account
+<li>Oups ! Some wording were not translated in the new
+Account
 dialog.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 The duplicate button in the new account dialog had no wording ... and
 did nothing.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 A lot of problems in the new account dialog with the mode list buttons.</li>
 </ul>
 <h2>Version 0.1.19 (09/23/2009)</h2>
 <ul>
-<li>Add an administration panel, with the ability to define and
+<li>Add an administration panel, with the ability to define
+and
 manage periodical transactions.</li>
 <li>Add tooltips on main window tabs.</li>
 <li>Change the "duplicate" button behaviour (in the
@@ -362,7 +404,8 @@ when you duplicate a transaction.</li>
 </ul>
 <h2>Version 0.1.18 (09/19/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 Some problems in menu items refresh. Some of them were enabled or
 disabled ... but they'd rather not.</li>
 <li>Add some toolTips.</li>
@@ -371,13 +414,16 @@ incompatible old java version (prior to 1.6).</li>
 </ul>
 <h2>Version 0.1.17 (09/18/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 The proxy authentication was broken.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 When an account was added, sometimes, the filter menu was broken.</li>
 <li>Add a menuItem to check the selected transaction in the
 transactions table contextual menu.</li>
-<li>Oups ! Some wording were not translated in the new Account
+<li>Oups ! Some wording were not translated in the new
+Account
 dialog.</li>
 <li><span class="develop">Developpers</span>
 : Switch to a plug-in architecture for all the
@@ -387,7 +433,8 @@ panels in the main window.</li>
 <ul>
 <li>Add support to proxid Internet connections.</li>
 <li>Add a contextual menu on the transactions table.</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 A double click with the right button (or the central one) edited the
 selected transaction (not the one clicked). Now right double clicks are
 ignored</li>
@@ -402,7 +449,8 @@ to edit the preference file by hand).</li>
 </ul>
 <h2>Version 0.1.14 (09/13/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 When the preferred localization changed, the dates in the transaction
 table were still displayed using the initial localization.</li>
 <li>Add a new menu item to check for updates.</li>
@@ -422,7 +470,8 @@ chance to save is broken in v0.1.12"</a>.</li>
 change"</a>.</li>
 <li>Improve the sort of the transactions list (in previous
 versions a duplicated transaction could appear far away for its clone).</li>
-<li><span class="bugFix">Bug fixed</span> :
+<li><span class="bugFix">Bug fixed</span>
+:
 When first transaction table column (the
 open/close subtransactions control) was moved, you still had to click
 the first column to deploy the subtransactions view.</li>
