--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -12,10 +12,9 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style>
-</head>
+</style></head>
 <body>
-<h1>Version 0.7.0 (09/??/2010)</h1>
+<h1>Version 0.6.6 (09/19/2010)</h1>
 <h2>New in this version</h2>
 <ul>
 <li>Adds the ability to protect access to data files by
