--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -14,10 +14,9 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style>
-</head>
+</style></head>
 <body>
-<h1>Version 0.7.0 (??/09/2010)</h1>
+<h1>Version 0.6.6 (19/09/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li>Ajoute la possibilité de protéger l'accès aux fichiers de
