--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -14,15 +14,15 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.6.6 (09/19/2010)</h1>
+<h1>Version 0.6.7 (09/21/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Adds the ability to protect access to data files by
-password.</li>
+<li><span class="bugFix">Fixes a major bug</span> in data file reading : Some transactions was lost when checkbook was used and number was empty.<br></li>
 </ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.6.5 (08/10/2010)</h2>
+<h2>Version 0.6.6 (09/19/2010)</h2><ul><li>Adds the ability to protect access to data files by
+password.</li></ul><h2>Version 0.6.5 (08/10/2010)</h2>
 <ul>
 <li>Adds a confirm dialog when the user save data in an
 existing
