--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,15 +16,15 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.6 (19/09/2010)</h1>
+<h1>Version 0.6.7 (21/09/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Ajoute la possibilité de protéger l'accès aux fichiers de
-données par mot de passe.</li>
+<li><span class="bugFix">Correction d'un bug</span> très génant dans la lecture des fichiers de données : Des opérations pouvaient être perdues lorsqu'elle utilisaient un chéquier et que le numéro d'opération n'était pas renseigné.<br></li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version 0.6.5 (10/08/2010)</h2>
+<h2>Version 0.6.6 (21/09/2010)</h2><ul><li>Ajoute la possibilité de protéger l'accès aux fichiers de
+données par mot de passe.</li></ul><h2>Version 0.6.5 (10/08/2010)</h2>
 <ul>
 <li>Ajout d'un message de confirmation lorsque l'on sauve les
 données dans un fichier déjà existant.</li>
