--- a/Yapbam/src/net/yapbam/data/event/package.html
+++ b/Yapbam/src/net/yapbam/data/event/package.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-This package contains all the classes that represents events sent when Yapbam data is modified
+All the classes that represents events sent when Yapbam data is modified 
 </body>
 </html>
