--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -17,7 +17,7 @@ color: #ff9900;
 <h1>Version 0.7.0 (10/?/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Adds a &quot;bank statements&quot; view.</li>
+  <li>Adds a "bank statements" view.</li><li>When lauching Yapbam, the transactions table is automatically scrolled to the most recent transactions.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
