--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.7.0 (?/10/2010)</h1>
+<h1>Version 0.7.0 (17/10/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
   <li>Ajout d'un onglet de consultation des relevés de comptes.</li><li>Lors du lancement de Yapbam, la table des transactions est automatiquement scrollée jusqu'aux opérations les plus récentes.</li>
