--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -14,13 +14,20 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.7.0 (10/17/2010)</h1>
+<h1>Version 0.7.1 (10/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Adds a "bank statements" view.</li><li>When lauching Yapbam, the transactions table is automatically scrolled to the most recent transactions.</li>
+  <li>Performance improvement : The deletion of an account is far faster than 
+    in previous versions.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
+<h2>Version 0.7.0 (10/17/2010)</h2>
+<ul>
+  <li>Adds a "bank statements" view.</li>
+  <li>When lauching Yapbam, the transactions table is automatically scrolled to 
+    the most recent transactions.</li>
+</ul>
 <h2>Version 0.6.7 (09/21/2010)</h2>
 <ul>
   <li><span class="bugFix">Fixes a major bug</span> in data file reading : Some 
