--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,13 +16,20 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.7.0 (17/10/2010)</h1>
+<h1>Version 0.7.1 (??/10/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout d'un onglet de consultation des relevés de comptes.</li><li>Lors du lancement de Yapbam, la table des transactions est automatiquement scrollée jusqu'aux opérations les plus récentes.</li>
+  <li>Am&eacute;lioration de performance : La suppression d'un compte est beaucoup 
+    plus rapide que dans les versions pr&eacute;c&eacute;dente.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
+<h2>Version 0.7.0 (17/10/2010)</h2>
+<ul>
+  <li>Ajout d'un onglet de consultation des relevés de comptes.</li>
+  <li>Lors du lancement de Yapbam, la table des transactions est automatiquement 
+    scrollée jusqu'aux opérations les plus récentes.</li>
+</ul>
 <h2>Version 0.6.7 (21/09/2010)</h2>
 <ul>
   <li><span class="bugFix">Correction d'un bug</span> très génant dans la lecture 
