--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,8 +19,11 @@ color: #ff9900;
 <h1>Version 0.7.1 (??/10/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Am&eacute;lioration de performance : La suppression d'un compte est beaucoup 
-    plus rapide que dans les versions pr&eacute;c&eacute;dente.</li>
+  <li>Amélioration de performance : La suppression d'un compte est beaucoup 
+    plus rapide que dans les versions précédente.</li><li><span class="bugFix">Correction d'un bug mineur</span>
+: Dans certains pays, la prise en compte des séparateur de milliers
+dans les montants de transaction était incorrecte&nbsp;(par exemple, en
+France 5 000,00 était considéré comme une valeur invalide).</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
