--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -12,30 +12,38 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head>
+</style>
+</head>
 <body>
-<h1>Version 0.7.1 (10/??/2010)</h1>
+<h1>Version 0.7.1 (11/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Performance improvement : The deletion of an account is far faster than 
-    in previous versions.</li>
+<li>Performance improvement: The deletion of an account is far
+faster than in previous versions.</li>
+<li><span class="bugFix">Fixes a minor bug</span>: In some countries,
+the parsing of grouping separator in monetary values was wrong (ie, in
+France 5 000,00 wasn't considered as a valid value).&nbsp; </li>
 </ul>
 <hr>
 <h1>Older releases</h1>
 <h2>Version 0.7.0 (10/17/2010)</h2>
 <ul>
-  <li>Adds a "bank statements" view.</li>
-  <li>When lauching Yapbam, the transactions table is automatically scrolled to 
-    the most recent transactions.</li>
+<li>Adds a "bank statements" view.</li>
+<li>When lauching Yapbam, the transactions table is
+automatically scrolled to the most recent transactions.</li>
 </ul>
 <h2>Version 0.6.7 (09/21/2010)</h2>
 <ul>
-  <li><span class="bugFix">Fixes a major bug</span> in data file reading : Some 
-    transactions was lost when checkbook was used and number was empty.</li>
+<li><span class="bugFix">Fixes a major bug</span>
+in data file reading: Some transactions was lost when checkbook was
+used and number was empty.</li>
 </ul>
 <h2>Version 0.6.6 (09/19/2010)</h2>
-<ul><li>Adds the ability to protect access to data files by
-password.</li></ul><h2>Version 0.6.5 (08/10/2010)</h2>
+<ul>
+<li>Adds the ability to protect access to data files by
+password.</li>
+</ul>
+<h2>Version 0.6.5 (08/10/2010)</h2>
 <ul>
 <li>Adds a confirm dialog when the user save data in an
 existing
@@ -218,13 +226,15 @@ Sometimes, it was impossible to change the account of a transaction.</li>
 </ul>
 <h2>Version 0.3.6 (11/22/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> : In the periodical
+<li><span class="bugFix">Bug fixed</span> :
+In the periodical
 transaction edit dialog, it was impossible to leave the end date blank
 if this field gained the focus.</li>
 </ul>
 <h2>Version 0.3.5 (11/20/2009)</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> : Saving data
+<li><span class="bugFix">Bug fixed</span> :
+Saving data
 containing a periodicalTransaction with a daily period didn't work.</li>
 <li>The periodical transactions can now have a end date.</li>
 </ul>
@@ -323,7 +333,8 @@ mark the transaction as checked.</li>
 <h2>Version 0.2.6 (10/13/2009)</h2>
 <ul>
 <li>Add a administration panel to manage categories.</li>
-<li><span class="bugFix">Bug fixed</span> : The popup menu in
+<li><span class="bugFix">Bug fixed</span> :
+The popup menu in
 the accounts administration panel had many separators.</li>
 <li><span class="bugFix">Bug fixed</span>
 :
