--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -12,14 +12,13 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style>
-</head>
+</style></head>
 <body>
 <h1>Version 0.7.1 (11/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Performance improvement: The deletion of an account is far
-faster than in previous versions.</li>
+<li>Performance improvement: Adminitsration tasks are  far
+faster than in previous versions (for instance, deletion of an account or a category).</li>
 <li><span class="bugFix">Fixes a minor bug</span>: In some countries,
 the parsing of grouping separator in monetary values was wrong (ie, in
 France 5 000,00 wasn't considered as a valid value).&nbsp; </li>
