--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -19,9 +19,9 @@ color: #ff9900;
 <h1>Version 0.7.1 (??/10/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Amélioration de performance : La suppression d'un compte est beaucoup 
-    plus rapide que dans les versions précédente.</li><li><span class="bugFix">Correction d'un bug mineur</span>
-: Dans certains pays, la prise en compte des séparateur de milliers
+  <li>Amélioration de performance : Les tâches d'administration
+sont beaucoup plus rapides que dans les versions précédentes (Par
+exemple, la suppression d'un compte ou d'une catégorie).</li><li><span class="bugFix">Correction d'un bug </span>: Dans certains pays, la prise en compte des séparateurs de milliers
 dans les montants de transaction était incorrecte&nbsp;(par exemple, en
 France 5 000,00 était considéré comme une valeur invalide).</li>
 </ul>
