--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -14,7 +14,7 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.7.1 (11/??/2010)</h1>
+<h1>Version 0.7.1 (11/09/2010)</h1>
 <h2>New in this version</h2>
 <ul>
 <li>Performance improvement: Adminitsration tasks are  far
