--- a/Yapbam/helpPortableApp.html
+++ b/Yapbam/helpPortableApp.html
@@ -3,12 +3,12 @@
 <head>
 <title>Yapbam Portable Help</title>
 <link rel="alternate" type="application/rss+xml" title="PortableApps.com" href="http://portableapps.com/feeds/general"/>
-<link rel="icon" type="image/vnd.microsoft.icon" href="Other/Help/images/favicon.ico"/>
-<link rel="SHORTCUT ICON" type="image/vnd.microsoft.icon" href="Other/Help/images/favicon.ico"/>
-<link rel="stylesheet" type="text/css" href="Other/Help/style.css" />
+<link rel="icon" type="image/vnd.microsoft.icon" href="Other/help/images/favicon.ico"/>
+<link rel="SHORTCUT ICON" type="image/vnd.microsoft.icon" href="Other/help/images/favicon.ico"/>
+<link rel="stylesheet" type="text/css" href="Other/help/style.css" />
 </head>
 <body>
-<div class="logo"><a href="http://portableapps.com/"><img src="Other/Help/images/help_logo_top.png" alt="PortableApps.com - Your Digital Life, Anywhere" height="47" width="229"/></a></div>
+<div class="logo"><a href="http://portableapps.com/"><img src="Other/help/images/help_logo_top.png" alt="PortableApps.com - Your Digital Life, Anywhere" height="47" width="229"/></a></div>
 
 <div class="content">
 <div id="french">
@@ -19,21 +19,18 @@ Yapbam, un gestionnaire de comptes personnels simple mais
 puissant. Vous pouvez l'installer sur un disque externe ou un clef USB
 et l'exécuter sur n'importe quel PC.</p>
 <p>Pour en savoir plus, visitez le site de <a href="http://www.yapbam.net">Yapbam</a>.</p>
-<p><a href="http://portableapps.com/donate"><img src="Other/Help/images/donation_button.png" alt="Faites un don" style="vertical-align:middle;" height="23" width="110"/></a> - Supportez
+<p><a href="http://portableapps.com/donate"><img src="Other/help/images/donation_button.png" alt="Faites un don" style="vertical-align:middle;" height="23" width="110"/></a> - Supportez
 PortableApps.com</p>
 <p><a href="http://PortableApps.com/">Découvrez les
 applications de PortableApps.com</a></p>
 <h2>Questions fréquentes sur Yapbam</h2>
 <ol>
-<li>Yapbam&nbsp;est-il gratuit ?</li>
-<li>Puis-je utiliser Yapbam sur n'importe quel ordinateur ?</li>
-<li>Comment puis-je rapporter un bug ou soumettre une demande
-d'évolution ?</li>
-<li>J'ai un problème d'utilisation de Yapbam, qui peut m'aider ?</li>
-<li>Puis-je aider Yapbam ?</li>
-<li>Mes sorties sur imprimante sont très laides. Que puis-je
-faire ?</li>
-<li>Comment désinstaller Yapbam ?</li>
+<li><a href="http://www.yapbam.net/fr/doc/index.php#q1">Yapbam&nbsp;est-il gratuit ?</a></li>
+<li><a href="http://www.yapbam.net/fr/doc/index.php#q2">Puis-je utiliser Yapbam sur n'importe quel ordinateur ?</a></li>
+<li><a href="http://www.yapbam.net/fr/doc/index.php#q3">J'ai un problème d'utilisation de Yapbam, qui peut m'aider ?</a></li>
+<li><a href="http://www.yapbam.net/fr/doc/index.php#q4">Comment puis-je rapporter un bug ou soumettre une demande d'évolution ?</a></li>
+<li><a href="http://www.yapbam.net/fr/doc/index.php#q5">Comment désinstaller Yapbam ?</a></li>
+<li><a href="http://www.yapbam.net/fr/doc/index.php#q6">Puis-je aider Yapbam ?</a></li>
 </ol>
 </div>
 <div id="english">
@@ -43,19 +40,18 @@ faire ?</li>
 simple but powerfull account manager. You can install it on a USB drive
 or key and use it on every PC you want.</p>
 <p>Lean more about <a href="http://www.yapbam.net">Yapbam</a>.</p>
-<p><a href="http://portableapps.com/donate"><img src="Other/Help/images/donation_button.png" alt="Make a Donation" style="vertical-align:middle;" height="23" width="110"/></a> - Support
+<p><a href="http://portableapps.com/donate"><img src="Other/help/images/donation_button.png" alt="Make a Donation" style="vertical-align:middle;" height="23" width="110"/></a> - Support
 PortableApps.com's Hosting and Development</p>
 <p><a href="http://PortableApps.com/">Get more
 portable apps at PortableApps.com</a></p>
 <h2>Yapbam frequently asked questions</h2>
 <ol>
 <li>Is Yapbam free ?</li>
-<li>Can I use Yapbam on a non-PC computer ?</li>
-<li>How can I submit a bug report or an enhancement request ?</li>
+<li>Can I use Yapbam on a non-Windows computer ?</li>
 <li>I have problem using Yapbam, who can help me ?</li>
-<li>Can I help Yapbam ?</li>
-<li>The printing I get is ugly. What can I do ?</li>
+<li>How can I submit a bug report or an enhancement request ?</li>
 <li>How to uninstall Yapbam ?</li>
+<li>Can I help Yapbam ?</li>
 </ol>
 </div>
 </div>
