--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -17,7 +17,7 @@ color: #ff9900;
 <h1>Version 0.7.2 (11/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Minor iprovements in check mode (Changing the date field automatically selects the box "Change value date by").</li></ul>
+<li>Minor improvement in check mode (Changing the date field automatically selects the box "Change value date by").</li><li>The "filter" menu is now hidden when the "Account statements" tab is selected (the filter is ignored in this view).</li><li>The Yapbam directory structure is changed to match the PortableApps.com format.</li></ul>
 <hr>
 <h1>Older releases</h1>
 <h2>Version 0.7.1 (11/09/2010)</h2>
