--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -19,7 +19,7 @@ color: #ff9900;
 <h1>Version 0.7.2 (??/11/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Amélioration mineure du mode pointage (la modification du champ date coche automatiquement "Remplacer la date de valeur par").</li></ul>
+  <li>Amélioration mineure du mode pointage (la modification du champ date coche automatiquement "Remplacer la date de valeur par").</li><li>Le menu "filtre" est à présent caché dans la vue "Relevés de compte" (cette vue ne prend pas en compte le filtrage).</li><li>La structure du répertoire contenant l'application est modifiée pour correspondre à celle de PortableApps.com.</li></ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version 0.7.1 (09/11/2010)</h2><ul><li>Amélioration de performance : Les tâches d'administration
