--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -12,8 +12,7 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style>
-</head>
+</style></head>
 <body>
 <h1>Version 0.7.2 (11/??/2010)</h1>
 <h2>New in this version</h2>
@@ -26,7 +25,10 @@ statements" tab is selected (the filter is ignored in this view).</li>
 "customized filter" dialog.</li>
 <li>The Yapbam directory structure is changed to match the
 PortableApps.com format.</li>
-<li><span class="bugFix">Minor bugs fixed</span> in the "customized filter" dialog.</li>
+<li><span class="bugFix">Minor bugs fixed</span>
+in the "customized filter" dialog.</li>
+<li><span class="bugFix">Fixes a minor bug</span> under Windows Vista : After the end of
+the program (yapbam.exe), Vista asked if the program ran fine.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
