--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -14,34 +14,60 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style></head>
+</style>
+</head>
 <body>
 <h1>Version 0.7.2 (??/11/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Amélioration mineure du mode pointage (la modification du champ date coche automatiquement "Remplacer la date de valeur par").</li><li>Le menu "filtre" est à présent caché dans la vue "Relevés de compte" (cette vue ne prend pas en compte le filtrage).</li><li>Ajout de cases à cocher "Dépenses" et "Recettes" dans le dialogue "Filtre personnalisé".</li><li>La structure du répertoire contenant l'application est modifiée pour correspondre à celle de PortableApps.com.</li><li><span class="bugFix">Correction de
-bugs mineurs</span>&nbsp;dans le dialogue "Filtre personnalisé".</li></ul>
+<li>Amélioration mineure du mode pointage (la modification du
+champ date coche automatiquement "Remplacer la date de valeur par").</li>
+<li>Le menu "filtre" est à présent caché dans la vue "Relevés
+de compte" (cette vue ne prend pas en compte le filtrage).</li>
+<li>Ajout de cases à cocher "Dépenses" et "Recettes" dans le
+dialogue "Filtre personnalisé".</li>
+<li>La structure du répertoire contenant l'application est
+modifiée pour correspondre à celle de PortableApps.com.</li>
+<li><span class="bugFix">Correction de
+bugs mineurs</span>&nbsp;dans le dialogue "Filtre
+personnalisé".</li>
+<li><span class="bugFix">Correction d'un
+bug mineur</span> sous Vista. Une fois l'exécution de Yapbam.exe terminée, Vista demandait si le programme avait fonctionné correctement.</li>
+</ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version 0.7.1 (09/11/2010)</h2><ul><li>Amélioration de performance : Les tâches d'administration
-sont beaucoup plus rapides que dans les versions précédentes (Par
-exemple, la suppression d'un compte ou d'une catégorie).</li><li><span class="bugFix">Correction d'un bug </span>: Dans certains pays, la prise en compte des séparateurs de milliers
-dans les montants de transaction était incorrecte&nbsp;(par exemple, en
-France 5 000,00 était considéré comme une valeur invalide).</li><li><span class="bugFix">Correction d'un bug majeur </span>: Parfois, l'importation ne faisait ... rien ! :-(</li></ul><h2>Version 0.7.0 (17/10/2010)</h2>
+<h2>Version 0.7.1 (09/11/2010)</h2>
 <ul>
-  <li>Ajout d'un onglet de consultation des relevés de comptes.</li>
-  <li>Lors du lancement de Yapbam, la table des transactions est automatiquement 
-    scrollée jusqu'aux opérations les plus récentes.</li>
+<li>Amélioration de performance : Les tâches d'administration
+sont beaucoup plus rapides que dans les versions précédentes (Par
+exemple, la suppression d'un compte ou d'une catégorie).</li>
+<li><span class="bugFix">Correction d'un bug </span>:
+Dans certains pays, la prise en compte des séparateurs de milliers
+dans les montants de transaction était incorrecte&nbsp;(par
+exemple, en
+France 5 000,00 était considéré comme une valeur invalide).</li>
+<li><span class="bugFix">Correction d'un bug
+majeur </span>: Parfois, l'importation ne faisait ... rien ! :-(</li>
+</ul>
+<h2>Version 0.7.0 (17/10/2010)</h2>
+<ul>
+<li>Ajout d'un onglet de consultation des relevés de comptes.</li>
+<li>Lors du lancement de Yapbam, la table des transactions est
+automatiquement scrollée jusqu'aux opérations les plus récentes.</li>
 </ul>
 <h2>Version 0.6.7 (21/09/2010)</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug</span> très génant dans la lecture 
-    des fichiers de données : Des opérations pouvaient être perdues lorsqu'elles 
-    utilisaient un chéquier et que le numéro d'opération n'était pas renseigné.</li>
+<li><span class="bugFix">Correction d'un bug</span>
+très génant dans la lecture des fichiers de données : Des opérations
+pouvaient être perdues lorsqu'elles utilisaient un chéquier et que le
+numéro d'opération n'était pas renseigné.</li>
 </ul>
 <h2>Version 0.6.6 (19/09/2010)</h2>
-<ul><li>Ajoute la possibilité de protéger l'accès aux fichiers de
-données par mot de passe.</li></ul><h2>Version 0.6.5 (10/08/2010)</h2>
+<ul>
+<li>Ajoute la possibilité de protéger l'accès aux fichiers de
+données par mot de passe.</li>
+</ul>
+<h2>Version 0.6.5 (10/08/2010)</h2>
 <ul>
 <li>Ajout d'un message de confirmation lorsque l'on sauve les
 données dans un fichier déjà existant.</li>
