--- a/Yapbam/helpPages/portableApps.com/help.html
+++ b/Yapbam/helpPages/portableApps.com/help.html
@@ -18,6 +18,7 @@ Yapbam, un gestionnaire de comptes personnels simple mais
 puissant. Vous pouvez l'installer sur un disque externe ou une clef USB
 et l'exécuter sur n'importe quel PC.</p>
 <p>Pour en savoir plus, visitez le site de <a href="http://www.yapbam.net">Yapbam</a>.</p>
+<p>Vous pouvez tester Yapbam en ouvrant l'un des fichiers de test présents dans le dossier <a href="Other/samples">Other/samples</a>.</p>
 <p><a href="http://portableapps.com/donate"><img src="Other/help/images/donation_button.png" alt="Faites un don" style="vertical-align:middle;" height="23" width="110"/></a> - Supportez PortableApps.com</p>
 <p><a href="http://PortableApps.com/">Découvrez les applications de PortableApps.com</a></p>
 <h2>Questions fréquentes sur Yapbam</h2>
@@ -37,6 +38,7 @@ et l'exécuter sur n'importe quel PC.</p>
 simple but powerfull account manager. You can install it on a USB drive
 or key and use it on every PC you want.</p>
 <p>Lean more about <a href="http://www.yapbam.net">Yapbam</a>.</p>
+<p>You could test Yapbam with one of the test files in the <a href="Other/samples">Other/samples</a> folder.</p>
 <p><a href="http://portableapps.com/donate"><img src="Other/help/images/donation_button.png" alt="Make a Donation" style="vertical-align:middle;" height="23" width="110"/></a> - Support
 PortableApps.com's Hosting and Development</p>
 <p><a href="http://PortableApps.com/">Get more
