--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -14,25 +14,18 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.7.2 (11/23/2010)</h1>
-<h2>New in this version</h2>
-<ul>
-<li>Minor improvement in check mode (Changing the date field
-automatically selects the box "Change value date by").</li>
-<li>The "filter" menu is now hidden when the "Account
-statements" tab is selected (the filter is ignored in this view).</li>
-<li>Adds "receipts" and "expenses" check boxes in the
-"customized filter" dialog.</li>
-<li>The Yapbam directory structure is changed to match the
-PortableApps.com format.</li>
-<li><span class="bugFix">Minor bugs fixed</span>
-in the "customized filter" dialog.</li>
-<li><span class="bugFix">Fixes a minor bug</span> under Windows Vista : After the end of
-the program (yapbam.exe), Vista asked if the program ran fine.</li>
-</ul>
+<h1>Version 0.7.3 (11/26/2010)</h1>
+<h2>New in this version</h2><span class="bugFix">Fixes a bug</span>: The statistics charts were wrong since 0.7.2.<br>Adds a launch script for Linux computer.
+<ul></ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.7.1 (11/09/2010)</h2>
+<h2>Version 0.7.2 (11/23/2010)</h2><ul><li>Minor improvement in check mode (Changing the date field
+automatically selects the box "Change value date by").</li><li>The "filter" menu is now hidden when the "Account
+statements" tab is selected (the filter is ignored in this view).</li><li>Adds "receipts" and "expenses" check boxes in the
+"customized filter" dialog.</li><li>The Yapbam directory structure is changed to match the
+PortableApps.com format.</li><li><span class="bugFix">Minor bugs fixed</span>
+in the "customized filter" dialog.</li><li><span class="bugFix">Fixes a minor bug</span> under Windows Vista : After the end of
+the program (yapbam.exe), Vista asked if the program ran fine.</li></ul><h2>Version 0.7.1 (11/09/2010)</h2>
 <ul>
 <li>Performance improvement: Adminitsration tasks are far
 faster than in previous versions (for instance, deletion of an account
